--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "boxicons": "^2.1.4",
+    "framer-motion": "^11.11.11",
     "gsap": "^3.12.5",
     "jquery": "^3.7.1",
     "react": "^18.3.1",
